--- a/src/App.css
+++ b/src/App.css
@@ -231,13 +231,14 @@ hero
   max-width: 640px;
   display: flex;
   align-content: center;
-  
+  margin-top: 150px;
   flex-direction: column;
   justify-content: center;
   padding: 0 0 250px;
 }
 
 .heroBlock h6 {
+  
   font-size: 30px;
   line-height: 1.2;
   margin: 0 0 30px;
